# flowstate

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
skills/: flowstate-task-management.md
src/: errors.rs  main.rs  output.rs  recur.rs
src/cli/: agenda.rs  mod.rs  state.rs  task.rs
src/db/: mod.rs
src/db/migrations/: 001_init.sql  002_metadata_and_attachments.sql
src/models/: mod.rs
tests/: integration_test.rs
